# Electronics_Inventory

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README-CMAKE.md  README.md
UI/Electronics_Inventory_User_Interface/: CMakeLists.txt  add_item_dialog.h  database.cpp  database.h  edit_item_dialog.cpp  edit_item_dialog.h  edit_item_dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.sync-conflict-20260415-085144-BIGLDUM.cpp  mainwindow.ui  settings.cpp  settings.h  settings.ui  view_item_dialog.h  view_item_dialog.ui
UI/Electronics_Inventory_User_Interface/Other new db dir/: inventory.db
UI/Electronics_Inventory_User_Interface/Test DB Directory/: inventory.db
UI/Electronics_Inventory_User_Interface/copy of Electronics/: CMakeLists.txt  README.md  add_item_dialog.cpp  add_item_dialog.ui  mainwindow.cpp  mainwindow.sync-conflict-20260407-095240-BIGLDUM.cpp  view_item_dialog.cpp
app/: CMakeLists.txt
app/cmake/: CreateConfig.cmake  EmbedIcons.cmake  EmbedSQL.cmake
app/include/: Application.hpp  electronic_components.hpp  electronic_math.hpp  electronics_manager.hpp
app/include/database/: Database.hpp  EmbeddedSQLCode.hpp  MassQuery.hpp  MassQueryConfig.hpp  MassQueryResult.hpp  SQLiteDatabase.hpp  Transaction.hpp
app/include/database/exceptions/: DatabaseException.hpp  Exceptions.hpp  FailedInitializationException.hpp  UninitializedDatabaseException.hpp
app/include/electrical/: BJTransistor.hpp  Capacitor.hpp  Diode.hpp  ElectronicComponent.hpp  ElectronicComponents.hpp  FETransistor.hpp  Inductor.hpp  IntegratedCircuit.hpp  Resistor.hpp
app/include/example_folder1/: dummy11.h
app/include/integration/: DistributorImportSchema.hpp  PythonScriptRunner.hpp
app/include/settings/: Settings.hpp
app/include/ui/: AddItemDialog.hpp  Database.hpp  DatabaseManager.hpp  EditItemDialog.hpp  MainWindow.hpp  Settings.hpp  ViewItemDialog.hpp
app/layout/: AddItemDialog.ui  EditItemDialog.ui  MainWindow.ui  Settings.ui  ViewItemDialog.ui
app/sql/: Accesors.sql  Accessors.sql  Schema.sql  Transaction.sql
app/src/: Application.cpp  DistributorImportSchema.cpp  PythonScriptRunner.cpp  electronic_components.cpp  electronics_manager.cpp  main.cpp
app/src/database/: MassQueryConfig.cpp  SQLiteDatabase.cpp
app/src/example_folder1/: dummy11.cpp
app/src/settings/: Settings.cpp
app/src/ui/: AddItemDialog.cpp  Database.cpp  DatabaseManager.cpp  EditItemDialog.cpp  MainWindow.cpp  Settings.cpp  ViewItemDialog.cpp
app/tests/: test_components.cpp  test_distributor_import_schema.cpp  test_python_script_runner.cpp  test_settings.cpp  test_sqlitedb.cpp
assets/: assets.qrc
assets/icons/: icon.icns
docs/: BUILD.md  Build.md  CppCodeGuidelines.md  DatabaseAPI.md  DigiKeyImport.md  DistributorJSONSchema.md  DownloadQT.md  ProjectStructure.md  PythonIntegration.md  TESTING.md  UIDevelopment.md
include/: ProjectSetupTest.h
schemas/: ecim.distributor-import.schema.v1.json
scripts/: digikey_import.py  digikey_to_ecim.py  ecim_bridge_echo.py
scripts/filldb/: BJTransistors.csv  Capacitors.csv  Diodes.csv  FETransistors.csv  Inductors.csv  IntegratedCircuits.csv  Resistors.csv  csv_import.py  filldb.sh
scripts/tests/: test_digikey_import.py
src/: ProjectSetupTest.cpp  main.cpp
